[project]
name = "lab-snippets"
version = "2.1.8"
description = "Code snippets for the course 'Distributed Systems -- Module 2' at the University of Bologna"
authors = [
    { name = "Giovanni Ciatto", email = "giovanni.ciatto@unibo.it" }
]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">= 3.9, < 4.0"

dependencies = [
    "pygame>=2.6.0,<3.0.0",
    "psutil>=7.0.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "coverage>=7.4.0,<8.0.0",
    "mypy>=1.10.1,<2.0.0",
    "poethepoet>=0.37.0,<1.0.0",
    "pytest>=8.2.2,<9.0.0",
]

[project.scripts]
lab = "snippets:main"

[tool.poe.tasks]
mypy = "mypy snippets"
compile = "python -m compileall snippets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["snippets"]

[tool.mypy]
ignore_missing_imports = true
no_implicit_optional = false
